k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-library
  namespace: colossus-home-library
  labels:
    app: home-library
    managed-by: colossus
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: home-library
  template:
    metadata:
      labels:
        app: home-library
    spec:
      hostAliases:
        - ip: "192.168.50.250"
          hostnames:
            - "ubuntu.desmana-truck.ts.net"
      containers:
        - name: app
          image: ubuntu:30500/home-library:latest
          imagePullPolicy: Always
