k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-library-staging
  namespace: colossus-home-library-staging
  labels:
    app: home-library-staging
    managed-by: colossus
spec:
  type: ClusterIP
  selector:
    app: home-library-staging
  ports:
    - port: 80
      targetPort: 80
